fixing spacing projects issue

--- a/src/editprojects.css
+++ b/src/editprojects.css
@@ -18,9 +18,9 @@
 .projects-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;  
+  justify-content: flex-start;  
   align-items: center;     
-  height: 100vh;  
+  height: auto;  
   background-color: rgb(224, 224, 224);
   background: linear-gradient(-250deg, rgb(185, 183, 183) 20%, rgba(123, 123, 123, 1) 65%, rgba(153, 153, 153, 1) 100%);
   background-size: 600% 600%;
@@ -34,7 +34,7 @@
   color: #333;
   margin-bottom: 20px;
   color: black;
-  padding: 20px 0; 
+  padding: 10px 0; 
   width: 100%; 
   text-align: center; 
 }
@@ -154,13 +154,12 @@
   }
 
   .projects-container{
-    padding-bottom:600px;
+    padding-bottom:800px;
   }
 
   .projects-board {
     flex-direction: column;
     align-items: center;
-    margin-top: 500px;
   }
 
   .project-card {
